--- a/style.css
+++ b/style.css
@@ -67,7 +67,9 @@ img{
 .mt-4{
     margin-top: 4rem;
 }
-
+.mt-half{
+    margin-top: .5rem;
+}
 
 
 /* HEADER STYLING */
@@ -197,10 +199,66 @@ h3{
 }
 .order-card img{
     width: 15rem;
+    filter: drop-shadow(
+        rgba(0, 0, 0, 0.2) 0 10px 10px
+    );
 }
 h4{
-    
+    font-size: 1.8rem;
+    color: var(--lead);
 }
+.order-card .price{
+    font-size: 1.7rem;
+    color: var(--gold-finger);
+    padding: 1.3rem 0 2rem 0;
+}
+/* SECTION 03 */
+.review-container{
+    width: 650px;
+    max-width: 100%;
+    flex: 1;
+}
+.swiper {
+      width: 100%;
+      height: 100%;
+    }
+    .profile{
+        width: 4rem;
+        aspect-ratio: 1;
+        border-radius: 100vw;
+        overflow: hidden;
+    }
+    .profile img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .fa-star{
+        color: var(--gold-finger);
+    }
+    .arrow{
+        width: 2.5rem;
+        aspect-ratio: 1;
+        border-radius: 100vw;
+        background: var(--gold-finger);
+        color: var(--lead);
+        text-align: center;
+        line-height: 2.5rem;
+    }
+    /* SECTION 04 */
+    .app-container{
+     background: var(--hint-yellow);
+     padding: 3rem 6rem;
+     border-radius: 3rem;
+     flex: 1;
+    }
+    .app-container h2{
+        font-size: 4.5rem;
+    }
+    .app-image img{
+        width: 25rem;
+        
+    }
 /* FOOTER STYLING */
 
 
@@ -279,78 +337,4 @@ h4{
  h2{
     font-size: 3rem;
  }
-    /* SECTION 02 */
-.order-card{
-    flex: 1;
-    flex-basis: 250px;
-    background: var(--pure-white);
-    border: .1rem solid var(--gold-finger);
-        border-radius: 2rem;
-        padding: 0 1rem 2rem 1rem;
-        box-shadow:
-        rgba(0, 0, 0, 0.05) 8px 8px 8px,
-        rgba(0, 0, 0, 0.05) 8px 8px 8px inset;
-}
-.order-card img{
-    width: 15rem;
-    filter: drop-shadow(
-        rgba(0, 0, 0, 0.2) 0 10px 10px
-    );
-}
-h4{
-    font-size: 1.8rem;
-    color: var(--lead);
-}
-.order-card .price{
-    font-size: 1.7rem;
-    color: var(--gold-finger);
-    padding: 1.3rem 0 2rem 0;
-}
-/* SECTION 03 */
-.review-container{
-    width: 650px;
-    max-width: 100%;
-    flex: 1;
-}
-.swiper {
-      width: 100%;
-      height: 100%;
-    }
-    .profile{
-        width: 4rem;
-        aspect-ratio: 1;
-        border-radius: 100vw;
-        overflow: hidden;
-    }
-    .profile img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    .fa-star{
-        color: var(--gold-finger);
-    }
-    .arrow{
-        width: 2.5rem;
-        aspect-ratio: 1;
-        border-radius: 100vw;
-        background: var(--gold-finger);
-        color: var(--lead);
-        text-align: center;
-        line-height: 2.5rem;
-    }
-    /* SECTION 04 */
-    .app-container{
-     background: var(--hint-yellow);
-     padding: 3rem 6rem;
-     border-radius: 3rem;
-     flex: 1;
-    }
-    .app-container h2{
-        font-size: 4.5rem;
-    }
-    .app-image img{
-        width: 25rem;
-        
-    }
 }
